Implementing the RSS monitor into VIATRA (this was done for the presentation but not the report and was never pushed), switch to a 3 lane model (left, centre, right) as taking lanes directly from carla is buggy, bug fixes and refactoring